// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constructNewLiveOrder ask 1`] = `
Object {
  "account": "makerAddress",
  "amount": 122,
  "balance": 122,
  "createdAt": 1234567890,
  "currentSequence": 0,
  "expiry": 1234567890000,
  "fee": 1,
  "feeAsset": "makerCode",
  "fill": 0,
  "initialSequence": 0,
  "matching": 0,
  "orderHash": "0xOrderHash",
  "pair": "makerCode|takerCode",
  "price": 3.737704918032787,
  "side": "ask",
}
`;

exports[`constructNewLiveOrder ask 2`] = `
Object {
  "account": "makerAddress",
  "amount": 122,
  "balance": 122,
  "createdAt": 1234567890,
  "currentSequence": 0,
  "expiry": 1234567890000,
  "fee": 1,
  "feeAsset": "makerCode",
  "fill": 0,
  "initialSequence": 0,
  "matching": 0,
  "orderHash": "0xOrderHash",
  "pair": "makerCode|takerCode",
  "price": 3.737704918032787,
  "processed": true,
  "side": "ask",
  "status": "status",
  "transactionHash": "txHash",
  "type": "type",
  "updatedBy": "updatedBy",
}
`;

exports[`constructNewLiveOrder bid 1`] = `
Object {
  "account": "makerAddress",
  "amount": 457,
  "balance": 457,
  "createdAt": 1234567890,
  "currentSequence": 0,
  "expiry": 1234567890000,
  "fee": 1,
  "feeAsset": "takerCode",
  "fill": 0,
  "initialSequence": 0,
  "matching": 0,
  "orderHash": "0xOrderHash",
  "pair": "takerCode|makerCode",
  "price": 0.26914660831509846,
  "side": "bid",
}
`;

exports[`constructNewLiveOrder bid 2`] = `
Object {
  "account": "makerAddress",
  "amount": 457,
  "balance": 457,
  "createdAt": 1234567890,
  "currentSequence": 0,
  "expiry": 1234567890000,
  "fee": 1,
  "feeAsset": "takerCode",
  "fill": 0,
  "initialSequence": 0,
  "matching": 0,
  "orderHash": "0xOrderHash",
  "pair": "takerCode|makerCode",
  "price": 0.26914660831509846,
  "processed": true,
  "side": "bid",
  "status": "status",
  "transactionHash": "txHash",
  "type": "type",
  "updatedBy": "updatedBy",
}
`;

exports[`getAmountAfterFee ask base flat 1`] = `
Object {
  "makerAssetAmount": "150",
  "takerAssetAmount": "1.49",
}
`;

exports[`getAmountAfterFee ask base ratio 1`] = `
Object {
  "makerAssetAmount": "150",
  "takerAssetAmount": "1.485",
}
`;

exports[`getAmountAfterFee ask flat 1`] = `
Object {
  "makerAssetAmount": "101",
  "takerAssetAmount": "1",
}
`;

exports[`getAmountAfterFee ask ratio 1`] = `
Object {
  "makerAssetAmount": "101",
  "takerAssetAmount": "1",
}
`;

exports[`getAmountAfterFee bid base flat 1`] = `
Object {
  "makerAssetAmount": "1.01",
  "takerAssetAmount": "100",
}
`;

exports[`getAmountAfterFee bid base ratio 1`] = `
Object {
  "makerAssetAmount": "1.515",
  "takerAssetAmount": "150",
}
`;

exports[`getAmountAfterFee bid flat 1`] = `
Object {
  "makerAssetAmount": "1",
  "takerAssetAmount": "99",
}
`;

exports[`getAmountAfterFee bid ratio 1`] = `
Object {
  "makerAssetAmount": "1",
  "takerAssetAmount": "99",
}
`;

exports[`getPriceBeforeFee ask base flat 1`] = `
Object {
  "amount": "123",
  "feeAmount": "1",
  "price": "3.715447154471544715447154471544715447154471544715447154471544715447154471544715",
}
`;

exports[`getPriceBeforeFee ask base ratio 1`] = `
Object {
  "amount": "123",
  "feeAmount": "4.606060606060606060606060606060606060606060606060606060606060606060606060606061",
  "price": "3.744764720374476472037447647203744764720374476472037447647203744764720374476472",
}
`;

exports[`getPriceBeforeFee ask flat 1`] = `
Object {
  "amount": "122",
  "feeAmount": "1",
  "price": "3.737704918032786885245901639344262295081967213114754098360655737704918032786885",
}
`;

exports[`getPriceBeforeFee ask ratio 1`] = `
Object {
  "amount": "121.782178217821782178217821782178217821782178217821782178217821782178217821782178",
  "feeAmount": "1.217821782178217821782178217821782178217821782178217821782178217821782178217822",
  "price": "3.744390243902439024390243902439024390243902439024390243902439024390243902439024",
}
`;

exports[`getPriceBeforeFee bid base flat 1`] = `
Object {
  "amount": "123",
  "feeAmount": "1",
  "price": "3.699186991869918699186991869918699186991869918699186991869918699186991869918699",
}
`;

exports[`getPriceBeforeFee bid base ratio 1`] = `
Object {
  "amount": "123",
  "feeAmount": "4.514851485148514851485148514851485148514851485148514851485148514851485148514851",
  "price": "3.670610963535377928036706109635353779280367061096353537792803670610963535377928",
}
`;

exports[`getPriceBeforeFee bid flat 1`] = `
Object {
  "amount": "124",
  "feeAmount": "1",
  "price": "3.677419354838709677419354838709677419354838709677419354838709677419354838709677",
}
`;

exports[`getPriceBeforeFee bid ratio 1`] = `
Object {
  "amount": "124.242424242424242424242424242424242424242424242424242424242424242424242424242424",
  "feeAmount": "1.242424242424242424242424242424242424242424242424242424242424242424242424242424",
  "price": "3.67024390243902439024390243902439024390243902439024390243902439024390243902439",
}
`;

exports[`parseSignedOrder 1`] = `
Object {
  "exchangeAddress": "exchangeAddress",
  "expirationTimeSeconds": "1234567890",
  "feeRecipientAddress": "feeRecipientAddress",
  "makerAddress": "makerAddress",
  "makerAssetAmount": "123000000000000000000",
  "makerAssetData": "makerAssetData",
  "makerFee": "0",
  "salt": "789",
  "senderAddress": "senderAddress",
  "signature": "signature",
  "takerAddress": "takerAddress",
  "takerAssetAmount": "456000000000000000000",
  "takerAssetData": "takerAssetData",
  "takerFee": "0",
}
`;
